(add new changes on top of this file)

Änderungen
----------

v0.9.5 (05.11.2010)
 * Bugfix: Avoid warning while parsing TS configuration for plots
 * Bugfix: Missing include in datebase unit test added. Thanks to Hannes Bochmann
 * FormTool: Submit-Buttons and Links with icons possible

v0.9.4 (21.10.2010)
 * tx_rnbase_configurations: new methods getInt() and getBool()
 * BaseModule: more modificatios possible for concrete modules

v0.9.3 (26.09.2010)
 * SearchBase and util_DB: Support for HAVING clause.

v0.9.2 (26.09.2010) (not released)
 * ListBuilder renders character browser
 * Bugfix BaseFilter: CharBrowser works now with special characters (Thanks to Michael Wagner)
 * BaseController: new option ignoreActionParam to disable action setting by url parameters

v0.9.1 (13.09.2010)
 * SearchBase: ignore forcewrapper for count

v0.9.0 (03.09.2010)
 * Chart builder for extension pbimagegraph

v0.8.9 (09.08.2010)
 * All references to extensions lib/div removed.
 * PageBrowser: Respect maximum list limit.
 * tx_rnbase_controller: Verbose error messages possible if label found. Thanks to Lars Heber!
 * tx_rnbase_controller: Sending error mailings fixed. Thanks to Lars Heber!
 * Default file based cache can be activated in extension configuration.
 * Action based caching interface for frontend plugins. Not finished yet!
 * tx_rnbase_util_Link: KeepVars of other extension can be configured. Thanks to Pavel Klinkov! 
  linkcfg.useKeepVars.add = tx_ttnews::ttnews, tx_ttnews::*

v0.8.8 (17.07.2010)
 * Avoid warnings for NumberFormat called with string values
 * new class tx_rnbase_maps_Util

v0.8.7 (05.07.2010) (not released)
 * tx_rnbase_util_Files::getFileResource() works in BE

v0.8.6 (03.07.2010)
 * prepareTSFE: timetrack init before tsfe
 * CharBrowser: new option to place special fields at last
 * PageBrowser: init link by Typoscript

v0.8.5 (29.06.2010) (not released)
 * ListBuilder: support for multiple list subparts in a single template
